mini-nasdaq-risk-platform/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risk-platform-ingress
  namespace: mini-risk
spec:
  rules:
    - host: mini-risk.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8084
